# CSC232

./: README.md
Lab1/: Matthew Dombroski Lab 1.tgz
Lab1/.svn/: entries
Lab1/.svn/text-base/: CMakeLists.txt.svn-base
Lab1/Matthew Dombroski Lab 1/Part1to3/: ros_planner.ggo  ros_publisher.cpp  ros_publisher.cpp~
Lab1/Matthew Dombroski Lab 1/Part4/: #ros_subscriber.cpp#
Lab1/Matthew Dombroski Lab 1/Part4/.svn/text-base/: ros_subscriber.ggo.svn-base
Lab1/Matthew Dombroski Lab 1/Plotting/: Plotting1.m  Pos_data 1.txt  Pos_data 2.txt  Pos_data 3.txt  Pos_data 4.txt  Pos_data 5.txt  Twist_data 1.txt  Twist_data 2.txt  Twist_data 3.txt  Twist_data 4.txt  Twist_data 5.txt  predictedplots.m  predictor.m  predictor2.m
Lab1/Matthew Dombroski Lab 1/Question 3/: ros_subscriber.cpp
Lab1/Part1to3/.svn/: entries
Lab1/Part1to3/.svn/text-base/: ros_publisher.cpp.svn-base  ros_subscriber.cpp.svn-base
Lab1/Part4/: CMakeLists.txt
Lab1/Part4/.svn/: entries
Lab1/Q3/: ros_publisher.ggo
Lab2/: CMakeLists.txt  CMakeLists.txt~  naviSub.cpp  naviSub.ggo  odomPub.cpp  odomPub.ggo  odomPub.ggo~  ros_publisher.cpp  ros_publisher.cpp~  ros_subscriber.cpp~
Lab2/.svn/: entries
Lab2/.svn/text-base/: CMakeLists.txt~.svn-base  odomPub.cpp.svn-base
Lab3/: CMakeLists.txt  CMakeLists.txt~  gui.cpp  gui.cpp~  gui.h  gui.h~  gui_process.cpp  gui_process.cpp~  gui_process.ggo  naviSub.cpp  odomPub.cpp  odomPub.ggo  ros_publisher.ggo  ros_subscriber.cpp  screenshot1
Lab3/Data/: Beams_data_sim.txt  Pos_data_sim.txt  Twist_data_sim.txt
Lab3/Report/: Lab3.aux  Lab3.out  Lab3.tex  beams.m
Lab3/Report/Matthew Dombroski Lab3/Code/: gui.cpp  odomPub.cpp
Lab3/Report/Matthew Dombroski Lab3/Data/: Pos_data_lab.txt
Lab3/launch/: lab3.launch~
Lab4/: CMakeLists.txt  CMakeLists.txt~  Localizer.cpp  Localizer.cpp~  Localizer.ggo~  Localizer.h  LocalizerStart.cpp  LocalizerStart.ggo  LocalizerStart.ggo~  Tut on starting things  gui.cpp  gui.cpp~  gui.h  gui_process.cpp  localizer.cpp  localizer.h  odomPub.cpp  odomPub.cpp~  ros_publisher.cpp  ros_publisher.cpp~  ros_subscriber.cpp
Lab4/Data/Old/: Beams_data.txt  Mean_data.txt  Pos_data.txt
Lab4/Data/Try 1/: Mean_data.txt  Pos_data.txt
Lab4/Data/Try 2 good/: Mean_data.txt  Pos_data.txt
Lab4/Data/Try 3 also good/: Pos_data.txt  Twist_data.txt
Lab4/Depricated/: Matrix.h  localizer.cpp
Lab4/launch/: lab3.launch~
Lab4232/: Lab4 (1).tex
Lab4232/Data/: plotMean.m
Lab4232/Data/Old/: Twist_data.txt
Lab4232/Data/Try 1/: Twist_data.txt
Lab4232/Data/Try 2 good/: Twist_data.txt
Lab4232/Data/Try3good/: Mean_data.txt  plotMean.m  plotting1.m
Lab5/: CMakeLists.txt  CMakeLists.txt~  Localizer.cpp  Localizer.cpp~  Localizer.ggo  Localizer.h  Localizer.h~  LocalizerStart.cpp  LocalizerStart.cpp~  LocalizerStart.ggo  Tut on starting things  executive.cpp  gui.cpp  gui.h  gui_process.cpp  naviSub.cpp  node.h  odomPub.cpp  odomPub.ggo  pfc.cpp  pfc.cpp~  planner.cpp  planner.cpp~  point.cpp  point.h  ros_publisher.cpp  ros_subscriber.cpp  ros_subscriber.ggo
Lab5/Data/: Mean_data.txt  Mean_data_bot.txt  Pos_data.txt  Pos_data_bot.txt  Twist_data.txt  Twist_data_bot.txt
Lab5/Report/: Lab5.aux  Lab5.out  Lab5.tex
Lab5/launch/: lab5.launch
